--- a/app/views/layouts/staff.html.haml
+++ b/app/views/layouts/staff.html.haml
@@ -9,7 +9,7 @@
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = csrf_meta_tag
     = yield :stylesheets
-  %body.skin-green-light.fixed.sidebar-mini
+  %body.skin-green-light.sidebar-mini.sidebar-open
     .wrapper
       = render 'common/navigation'
       = render 'common/sidebar'
