--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     %meta{:content => "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no", :name => "viewport"}
     %meta{name: "text:Google Basic Font", content: "Noto Sans TC"}
     = csrf_meta_tags
-  %body.skin-blue
+  %body.skin-blue.sidebar-mini.sidebar-open
     = render 'common/navigation'
     .container-fluid
       = yield :before_container
