--- a/app/views/common/_navigation.html.haml
+++ b/app/views/common/_navigation.html.haml
@@ -1,4 +1,4 @@
-.main-header
+%header.main-header
   .logo= t('service_system')
   %nav.navbar.navbar-fixed-top(role='navigation')
     %a.sidebar-toggle(href='#' data-toggle='offcanvas' role='button')
