--- a/app/views/customer/service_requests/index.html.haml
+++ b/app/views/customer/service_requests/index.html.haml
@@ -1,1 +1,1 @@
-= render 'service_requests/index', service_requests: @service_requests, role: :customer
+= render 'service_requests/index', service_requests: @service_requests, service_requests_mainly_response: nil, role: :customer
