fix nav positioning

--- a/app/views/common/_navigation.html.haml
+++ b/app/views/common/_navigation.html.haml
@@ -1,6 +1,6 @@
 %header.main-header
   .logo= t('service_system')
-  %nav.navbar.navbar-fixed-top(role='navigation')
+  %nav.navbar.navbar-static-top(role='navigation')
     %a.sidebar-toggle(href='#' data-toggle='offcanvas' role='button')
     .collapse.navbar-collapse.navbar-custom-menu
       %span.sr-only Toggle navigation
