--- a/app/views/service_requests/_index.html.haml
+++ b/app/views/service_requests/_index.html.haml
@@ -9,7 +9,7 @@
           %table.table.table-bordered
             %thead
               %tr
-                %th= t('service_request.index')
+                %th.hidden-sm= t('service_request.index')
                 %th= t('service_request.customer_name')
                 %th= t('service_request.equipment_id')
                 %th= t('service_request.title')
@@ -22,7 +22,7 @@
             %tbody
               - service_requests_mainly_response.each do |sr|
                 %tr
-                  %td= sr.request_id
+                  %td.hidden-sm= sr.request_id
                   %td= sr.customer.username
                   %td= sr.equipment_id
                   %td= sr.title
@@ -52,24 +52,24 @@
           %thead
             %tr
               %th= t('service_request.index')
-              %th= t('service_request.customer_name')
-              %th= t('service_request.equipment_id')
+              %th.hidden-xs.hidden-sm= t('service_request.customer_name')
+              %th.hidden-xs.hidden-sm= t('service_request.equipment_id')
               %th= t('service_request.title')
               / %th= t('service_request.category')
-              %th= t('service_request.deadline')
+              %th.hidden-xs.hidden-sm= t('service_request.deadline')
               %th= t('service_request.state')
-              %th= t('service_request.assign_amount')
-              %th= t('service_request.comments_amount')
+              %th.hidden-xs.hidden-sm= t('service_request.assign_amount')
+              %th.hidden-xs.hidden-sm= t('service_request.comments_amount')
               %th= t('service_request.operation')
           %tbody
             - service_requests.each do |sr|
               %tr
                 %td= sr.request_id
-                %td= sr.customer.username
-                %td= sr.equipment_id
+                %td.hidden-xs.hidden-sm= sr.customer.username
+                %td.hidden-xs.hidden-sm= sr.equipment_id
                 %td= sr.title
                 / %td= sr.category.title
-                %td
+                %td.hidden-xs.hidden-sm
                   - if sr.close? or sr.complete?
                     = "-"
                   - elsif sr.deadline >= Date.today
@@ -77,8 +77,8 @@
                   - else
                     = t('overdue')
                 %td= render 'common/color_state', state: sr.state
-                %td= sr.assignments.blank? ? t('service_request.not_assigned') : sr.assignments.count
-                %td= sr.comments.blank? ? t('service_request.no_comments') : "#{sr.comments.count} #{t('comments.unit')}"
+                %td.hidden-xs.hidden-sm= sr.assignments.blank? ? t('service_request.not_assigned') : sr.assignments.count
+                %td.hidden-xs.hidden-sm= sr.comments.blank? ? t('service_request.no_comments') : "#{sr.comments.count} #{t('comments.unit')}"
                 %td
                   = link_to t('service_request.reply'), [role, sr]
                   - if current_user.customer? && !sr.close?
