--- a/app/views/common/_navigation.html.haml
+++ b/app/views/common/_navigation.html.haml
@@ -22,4 +22,5 @@
               = current_user.username
               %span.caret
             %ul.dropdown-menu.pull-right(role="menu")
+              %li= link_to t('edit'), edit_user_path(current_user), style: 'color: black'
               %li= link_to t('sign_out'), destroy_user_session_path, method: 'DELETE', style: 'color: black'
