--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -3,7 +3,7 @@
     %h1
       Edit #{resource_name.to_s.humanize}
     %hr
-    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+    = form_for(resource, as: resource_name, url: user_registration_path(resource_name), html: { method: :put }) do |f|
       = devise_error_messages!
       .form-group
         = f.label :username
@@ -28,9 +28,4 @@
         = f.password_field :current_password, autocomplete: "off", class: 'form-control'
       .form-group
         = f.submit "Update", class: 'btn btn-lg btn-block btn-primary'
-    %hr
-    %h2 Cancel my account
-    %p
-      Unhappy? #{button_to "Cancel my account", registration_path(resource_name), class: "btn btn-danger", data: { confirm: "Are you sure? You cannot undo this." }, method: :delete}
-    = link_to "Back", :back
     %hr
