--- a/app/assets/stylesheets/common/common.sass
+++ b/app/assets/stylesheets/common/common.sass
@@ -17,4 +17,11 @@
   .item
     a
       font-weight: normal !important
+.main-header
+  .logo
+    a
+      color: white
+      text-decoration: none
+      &:hover
+        background-color: transparent
     
