--- a/app/views/service_requests/_index.html.haml
+++ b/app/views/service_requests/_index.html.haml
@@ -1,4 +1,4 @@
-- if service_requests_mainly_response.present?
+- if service_requests_mainly_response
   .row
     .col-md-6
       .box
@@ -10,7 +10,7 @@
         .box-body
           - role = current_user.roles.first.name.to_sym
           - role = :staff if (role == :sales or role == :tech)
-          = search_form_for [role, @main_q] do |f|
+          = search_form_for [role, @q], url: owned_staff_service_requests_path do |f|
             .form-group.row
               .col-md-4= f.label :request_id_cont, '單號包含'
               .col-md-8= f.search_field :request_id_cont, class: 'form-control'
@@ -63,69 +63,71 @@
                     - if current_user.customer? && !sr.close?
                       = link_to t('edit'), edit_customer_service_request_path(sr)
                       = link_to t('delete'), customer_service_request_path(sr), method: 'DELETE', data: { confirm: t('delete_confirm')}
-.row
-  .col-md-6
-    .box
-      .box-header.with-border
-        %h3.box-title= t('service_request.search_form')
-        .box-tools.pull-right
-          %button.btn.btn-box-tool{data:{widget: 'collapse'}}
-            %i.fa.fa-minus
-      .box-body
-        - role = current_user.roles.first.name.to_sym
-        - role = :staff if (role == :sales or role == :tech)
-        = search_form_for [role, @q] do |f|
-          .form-group.row
-            .col-md-4= f.label :request_id_cont, '單號包含'
-            .col-md-8= f.search_field :request_id_cont, class: 'form-control'
-          .form-group.row
-            .col-md-4= f.label :equipment_id_cont, '設備編號包含'
-            .col-md-8= f.search_field :equipment_id_cont, class: 'form-control'
-          .form-group.row
-            .col-md-4= f.label :title_cont, '標題包含'
-            .col-md-8= f.search_field :title_cont, class: 'form-control'
-          .form-group.row
-            .col-md-12= f.button :submit, class: 'btn btn-primary'
-.row
-  .col-md-12
-    .box
-      %p#notice= notice
-      / %h3 Listing Service Requests
-      / = link_to 'New Service Request', new_customers_service_request_path, class: 'btn bg-purple'
-      .box-header.with-border
-      .box-body
-        %hr
-        %table.table.table-bordered
-          %thead
-            %tr
-              %th= t('service_request.index')
-              %th.hidden-xs.hidden-sm= t('service_request.customer_name')
-              %th.hidden-xs.hidden-sm= t('service_request.equipment_id')
-              %th= t('service_request.title')
-              / %th= t('service_request.category')
-              %th.hidden-xs.hidden-sm= t('service_request.deadline')
-              %th= t('service_request.state')
-              %th.hidden-xs.hidden-sm= t('service_request.comments_amount')
-              %th= t('service_request.operation')
-          %tbody
-            - service_requests.each do |sr|
+- if service_requests
+  .row
+    .col-md-6
+      .box
+        .box-header.with-border
+          %h3.box-title= t('service_request.search_form')
+          .box-tools.pull-right
+            %button.btn.btn-box-tool{data:{widget: 'collapse'}}
+              %i.fa.fa-minus
+        .box-body
+          - role = current_user.roles.first.name.to_sym
+          - role = :staff if (role == :sales or role == :tech)
+          = search_form_for [role, @q] do |f|
+            .form-group.row
+              .col-md-4= f.label :request_id_cont, '單號包含'
+              .col-md-8= f.search_field :request_id_cont, class: 'form-control'
+            .form-group.row
+              .col-md-4= f.label :equipment_id_cont, '設備編號包含'
+              .col-md-8= f.search_field :equipment_id_cont, class: 'form-control'
+            .form-group.row
+              .col-md-4= f.label :title_cont, '標題包含'
+              .col-md-8= f.search_field :title_cont, class: 'form-control'
+            .form-group.row
+              .col-md-12= f.button :submit, class: 'btn btn-primary'
+  .row
+    .col-md-12
+      .box
+        %p#notice= notice
+        / %h3 Listing Service Requests
+        / = link_to 'New Service Request', new_customers_service_request_path, class: 'btn bg-purple'
+        .box-header.with-border
+        .box-body
+          %hr
+          %table.table.table-bordered
+            %thead
               %tr
-                %td= sr.request_id
-                %td.hidden-xs.hidden-sm= sr.customer.username
-                %td.hidden-xs.hidden-sm= sr.equipment_id
-                %td= sr.title
-                / %td= sr.category.title
-                %td.hidden-xs.hidden-sm
-                  - if sr.close? or sr.complete?
-                    = "-"
-                  - elsif sr.deadline >= Date.today
-                    = t('overdue_after_days', days: sr.deadline.mjd - Date.today.mjd)
-                  - else
-                    = t('overdue')
-                %td= render 'common/color_state', state: sr.state
-                %td.hidden-xs.hidden-sm= sr.comments.blank? ? t('service_request.no_comments') : "#{sr.comments.count} #{t('comments.unit')}"
-                %td
-                  = link_to t('service_request.reply'), [role, sr]
-                  - if current_user.customer? && !sr.close?
-                    = link_to t('edit'), edit_customer_service_request_path(sr)
-                    = link_to t('delete'), customer_service_request_path(sr), method: 'DELETE', data: { confirm: t('delete_confirm')}
+                %th= t('service_request.index')
+                %th.hidden-xs.hidden-sm= t('service_request.customer_name')
+                %th.hidden-xs.hidden-sm= t('service_request.equipment_id')
+                %th= t('service_request.title')
+                / %th= t('service_request.category')
+                %th.hidden-xs.hidden-sm= t('service_request.deadline')
+                %th= t('service_request.state')
+                %th.hidden-xs.hidden-sm= t('service_request.comments_amount')
+                %th= t('service_request.operation')
+            %tbody
+              - service_requests = (service_requests or service_requests_mainly_response)
+              - service_requests.each do |sr|
+                %tr
+                  %td= sr.request_id
+                  %td.hidden-xs.hidden-sm= sr.customer.username
+                  %td.hidden-xs.hidden-sm= sr.equipment_id
+                  %td= sr.title
+                  / %td= sr.category.title
+                  %td.hidden-xs.hidden-sm
+                    - if sr.close? or sr.complete?
+                      = "-"
+                    - elsif sr.deadline >= Date.today
+                      = t('overdue_after_days', days: sr.deadline.mjd - Date.today.mjd)
+                    - else
+                      = t('overdue')
+                  %td= render 'common/color_state', state: sr.state
+                  %td.hidden-xs.hidden-sm= sr.comments.blank? ? t('service_request.no_comments') : "#{sr.comments.count} #{t('comments.unit')}"
+                  %td
+                    = link_to t('service_request.reply'), [role, sr]
+                    - if current_user.customer? && !sr.close?
+                      = link_to t('edit'), edit_customer_service_request_path(sr)
+                      = link_to t('delete'), customer_service_request_path(sr), method: 'DELETE', data: { confirm: t('delete_confirm')}
