--- a/app/views/staff/service_requests/index.html.haml
+++ b/app/views/staff/service_requests/index.html.haml
@@ -1,1 +1,1 @@
-= render 'service_requests/index', service_requests: @service_requests, service_requests_mainly_response: @service_requests_mainly_response, role: :staff
+= render 'service_requests/index', service_requests: @service_requests, service_requests_mainly_response: nil, role: :staff
