--- a/app/views/admin/customers/index.html.haml
+++ b/app/views/admin/customers/index.html.haml
@@ -7,6 +7,7 @@
         %table.table.table-bordered
           %thead
             %tr
+              %th= t('customer_number')
               %th= t('name')
               %th= t('requests_amount')
               %th= t('requests')
@@ -14,10 +15,20 @@
           %tbody
             - @customers.each do |customer|
               %tr
-                %td= customer.username
+                %td= customer.customer_number
+                %td= link_to customer.username, edit_admin_user_path(customer)
                 %td= customer.service_requests.count
                 %td
-                  %ul.nav.nav-stacked
-                    - customer.service_requests.each do |s|
-                      %li= render 'admin/common/path_to_request_show', s: s
+                  .button(type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#requestDetail#{customer.id}")
+                    細節
                 %td= customer.created_at.to_s(:simple_date)
+                .modal.fade(id="requestDetail#{customer.id}"tabindex="-1" role="dialog" aria-labelledby="myModalLabel")
+                  .modal-dialog(role="document")
+                    .modal-content
+                      .modal-header
+                        %h4.modal-title Request Detail
+                      .modal-body
+                        %ul.nav.nav-stacked
+                          - customer.service_requests.each do |s|
+                            %li= render 'admin/common/path_to_request_show', s: s
+= paginate @customers
