--- a/app/views/admin/staffs/admin_index.html.haml
+++ b/app/views/admin/staffs/admin_index.html.haml
@@ -7,10 +7,13 @@
         %table.table.table-bordered
           %thead
             %tr
+              %th= t('staff_number')
               %th= t('name')
               %th= t('register_date')
           %tbody
             - @admins.each do |admin|
               %tr
-                %td= admin.username
+                %td= admin.staff_number
+                %td= link_to admin.username, edit_admin_user_path(admin)
                 %td= admin.created_at.to_s(:simple_date)
+= paginate @admins
