--- a/app/views/service_requests/_comments.html.haml
+++ b/app/views/service_requests/_comments.html.haml
@@ -20,7 +20,7 @@
               .row
                 .col-md-10.col-md-offset-2
                   - comment.comment_documents.each do |document|
-                    = link_to File.basename(document.file_path.path), document.file_path.url, target: '_blank'
+                    .div= link_to File.basename(document.file_path.path), document.file_path.url, target: '_blank'
             %hr
 
         - else
