--- a/app/views/admin/staffs/admin_index.html.haml
+++ b/app/views/admin/staffs/admin_index.html.haml
@@ -16,5 +16,5 @@
                 %td= admin.staff_number
                 %td= link_to admin.username, edit_admin_user_path(admin)
                 %td= admin.created_at.to_s(:simple_date)
-%p= paginate @admins
+%p= paginate @admins if @admins.present?
 %p= "共 #{(@admins and @admins.size) || 0} 位管理員"
