--- a/app/views/admin/staffs/sales_index.html.haml
+++ b/app/views/admin/staffs/sales_index.html.haml
@@ -20,5 +20,5 @@
                 %td= link_to sales.assigned_service_requests_as_owner.count, index_for_certain_user_admin_service_requests_path(user_id: sales, role: 'owner')
                 %td= link_to sales.assigned_service_requests_as_sales.count, index_for_certain_user_admin_service_requests_path(user_id: sales, role: 'sales')
                 %td= sales.created_at.to_s(:simple_date)
-%p= paginate @sales
+%p= paginate @sales if sales.presents
 %p= "共 #{(@sales and @sales.size) || 0} 位業務"
