--- a/app/views/admin/staffs/techs_index.html.haml
+++ b/app/views/admin/staffs/techs_index.html.haml
@@ -18,5 +18,5 @@
                 %td= link_to tech.username, edit_admin_user_path(tech)
                 %td= link_to tech.assigned_service_requests_as_tech.count, index_for_certain_user_admin_service_requests_path(user_id: tech)
                 %td= tech.created_at.to_s(:simple_date)
-%p= paginate @teches if @techs.presents
+%p= paginate @teches if @teches.presents
 %p= "共 #{(@teches and @teches.size) || 0} 位技術人員"
