--- a/app/views/admin/customers/index.html.haml
+++ b/app/views/admin/customers/index.html.haml
@@ -1,7 +1,7 @@
 .row
   .col-md-12
     .box
-      .box-header.with-border 
+      .box-header.with-border
         %strong= t('customer_list')
       .box-body
         %table.table.table-bordered
@@ -21,3 +21,4 @@
                 %td= link_to 'Detail', index_for_certain_user_admin_service_requests_path(user_id: customer)
                 %td= customer.created_at.to_s(:simple_date)
 = paginate @customers if @customers.present?
+%p= "共 #{User.customers.size} 位客戶"
