--- a/app/views/assignment_notify_mailer/notify_customer.html.haml
+++ b/app/views/assignment_notify_mailer/notify_customer.html.haml
@@ -1,3 +1,3 @@
-%p= "Dear #{@user.username}"
+%p= "Dear #{@customer.username}"
 / %p= "You have been assigned to a request, please click below line to see the request detail and start process ASAP, thanks"
-%p= "We already received your Claim issue on #{@service_request.to_s(:simple_date_en)}, Please be assured that we will help you as soon as possible."
+%p= "We already received your Claim issue on #{@service_request.created_at.to_s(:simple_date_en)}, Please be assured that we will help you as soon as possible."
