--- a/app/views/layouts/staff.html.haml
+++ b/app/views/layouts/staff.html.haml
@@ -18,7 +18,7 @@
           = render 'common/messages'
           = yield
       %footer.main-footer
-        %strong Copyright &copy; 2016-2017 ZaiDei. All rights reserved. Theme powdered by
+        %strong Copyright &copy; 2016-2017 Ivan. All rights reserved. Theme powdered by
         %a{:href => "https://almsaeedstudio.com/"} Almsaeed Studio
 
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
