--- a/app/views/assignment_notify_mailer/change_state.html.haml
+++ b/app/views/assignment_notify_mailer/change_state.html.haml
@@ -1,2 +1,3 @@
 %p= "Dear #{@user.username}"
-%p= "#{@service_request.tile} is now change to #{@service_request.state}"
+%p= "#{@service_request.title} is now change to #{@service_request.state}"
+%p= "Request ID is #{@service_request.request_id}"
