--- a/app/views/service_requests/_show.html.haml
+++ b/app/views/service_requests/_show.html.haml
@@ -14,7 +14,7 @@
               %th= @service_request.customer.username
             %tr
               %th= t('service_request.index')
-              %th= @service_request.id[0..7]
+              %th= @service_request.request_id
             %tr
               %th= t('service_request.equipment_id')
               %th= @service_request.equipment_id
