--- a/app/views/service_requests/_index.html.haml
+++ b/app/views/service_requests/_index.html.haml
@@ -86,12 +86,13 @@
             .form-group.row
               .col-md-4= f.label :title_cont, '標題包含'
               .col-md-8= f.search_field :title_cont, class: 'form-control'
-            .form-group.row
-              .col-md-4= f.label :customer_username_cont, '客戶名稱包含'
-              .col-md-8= f.search_field :customer_username_cont, class: 'form-control'
-            .form-group.row
-              .col-md-4= f.label :customer_customer_number_start, '客戶編號包含'
-              .col-md-8= f.search_field :customer_customer_number_start, class: 'form-control'
+            - if !current_user.customer?
+              .form-group.row
+                .col-md-4= f.label :customer_username_cont, '客戶名稱包含'
+                .col-md-8= f.search_field :customer_username_cont, class: 'form-control'
+              .form-group.row
+                .col-md-4= f.label :customer_customer_number_start, '客戶編號包含'
+                .col-md-8= f.search_field :customer_customer_number_start, class: 'form-control'
             .form-group.row
               .col-md-4= f.label :state_eq, '狀態包含'
               .col-md-8= f.select :state_eq, ServiceRequest.aasm.states.map(&:name), include_blank: true, class: 'form-control'
